# openmander-core

./: .gitignore  Cargo.toml  Makefile  README.md
bindings/python/: Cargo.toml  Makefile  README.md  demo.ipynb  pyproject.toml  test_boundary.py
bindings/python/demo/: ct.ipynb  ia.ipynb  il.ipynb  illinois.ipynb  iowa.ipynb  run.py  run.sh  texas.ipynb  tx.ipynb
bindings/python/src/: lib.rs  map.rs  metric.rs  objective.rs  pack.rs  plan.rs
bindings/python/tests/: .gitignore  test.ipynb
bindings/wasm/: Cargo.toml
bindings/wasm/src/: common.rs  lib.rs  map.rs  plan.rs
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
cli/src/commands/: download.rs  mod.rs  redistrict.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  lib.rs  main.rs
crates/cli/src/commands/: download.rs  redistrict.rs
crates/cli/src/common/: mod.rs
crates/common/: Cargo.toml
crates/common/src/: download.rs  fs.rs  geog.rs  lib.rs
crates/common/src/io/: geoparquet.rs
crates/download/: Cargo.toml
crates/download/src/: lib.rs  pack.rs
crates/download/src/common/: data.rs  fs.rs  geo.rs  io.rs  mod.rs
crates/geograph/: Cargo.toml  DESIGN.md  INTERNALS.md  LICENSE-MIT  README.md
crates/geograph/src/: adj.rs  dcel.rs  io.rs  lib.rs  region.rs  rtree.rs  snap.rs  unit.rs
crates/geograph/src/io/: read.rs  write.rs
crates/geograph/src/region/: adj.rs  boundary.rs  build.rs  cache.rs  geom.rs  simplify.rs  snap.rs  topo.rs  validate.rs
crates/geograph/tests/: adj.rs  dcel.rs  geom.rs  io.rs  topo.rs
crates/geom/: Cargo.toml
crates/geom/src/: bbox.rs  geom.rs  lib.rs
crates/geom/src/algorithm/: adjacency.rs  crosswalk.rs  hull.rs  mod.rs  overlap.rs  perimeter.rs  proj.rs
crates/geometry/: Cargo.toml
crates/geometry/src/: lib.rs  types.rs
crates/geometry/src/algorithm/: adjacency.rs  crosswalk.rs  mod.rs  overlap.rs
crates/graph/: Cargo.toml
crates/graph/src/: articulation.rs  graph.rs  weights.rs
crates/map/: Cargo.toml
crates/map/src/: common.rs  geo_id.rs  geo_ty.rs  layer.rs  lib.rs  map.rs  parent.rs
crates/map/src/common/: data.rs  fs.rs  geom.rs  mod.rs
crates/map/src/common/io/: geoparquet.rs  mod.rs  svg.rs
crates/map/src/geom/: adjacency.rs  contiguity.rs  crosswalk.rs  geom.rs  mod.rs  overlap.rs  perimeter.rs
crates/map/src/geometry/: adjacency.rs  contiguity.rs  crosswalk.rs  mod.rs  perimeter.rs
crates/map/src/io/: svg.rs
crates/map/src/pack/: build.rs  manifest.rs  mod.rs  read.rs  svg.rs  write.rs
crates/map/src/types/: geo_id.rs  geo_type.rs  layer.rs  mod.rs
crates/pack/: Cargo.toml
crates/pack/src/: clean.rs  common.rs  download.rs  lib.rs  pack.rs
crates/partition/: Cargo.toml
crates/partition/src/: contiguity.rs  frontier.rs  lib.rs  partition.rs
crates/partition/src/algorithm/: anneal.rs  compactness.rs  equalize.rs  randomize.rs
crates/partition/src/graph/: graph.rs  mod.rs  weights.rs
crates/partition/src/partition/: contiguity.rs  frontier.rs  mod.rs  partition.rs
crates/plan/: Cargo.toml
crates/plan/src/: plan.rs
crates/plan/src/io/: csv.rs  mod.rs  svg.rs
crates/redistrict/: Cargo.toml
crates/redistrict/src/: districting.rs  lib.rs  plan.rs
crates/redistrict/src/algorithm/: anneal.rs  equalize.rs
crates/redistrict/src/common/: data.rs
crates/redistrict/src/graph/: articulation.rs  graph.rs  mod.rs  partition.rs  weights.rs
crates/redistrict/src/partition/: anneal.rs  compactness.rs  contiguity.rs  equalize.rs  heuristics.rs  hull.rs  mod.rs  partition.rs  randomize.rs
experiments/: .gitignore  compact_experiment.py  config.json  create_webpack.py  merge_svgs.py  plot_progress.py  redistrict_all.py  render_plans.py  run.py  run.sh  test.ipynb  test_webpack_conversion.py
src/: cli.rs  commands.rs  download.rs  geometry.rs  io.rs  lib.rs  main.rs  pack.rs  preprocess.rs  types.rs
src/commands/: download.rs  mod.rs  redistrict.rs
src/common/: data.rs  download.rs  fs.rs  geog.rs  mod.rs  polygon.rs
src/common/io/: csr.rs  csv.rs  geojson.rs  geoparquet.rs  json.rs  mod.rs  parquet.rs  shp.rs  svg.rs
src/common/io/svg/: color.rs  mod.rs  proj.rs  writer.rs
src/download/: census.rs  daves.rs  mod.rs  tiger.rs
src/geom/: bbox.rs  geom.rs  mod.rs
src/geom/algorithm/: adjacency.rs  crosswalk.rs  hull.rs  overlap.rs  perimeter.rs  proj.rs
src/geometry/: adjacency.rs  crosswalk.rs  intersection.rs  mod.rs  overlap.rs
src/graph/: articulation.rs  graph.rs  mod.rs  unit_graph.rs  weights.rs
src/io/: csr.rs  geoparquet.rs  mod.rs  parquet.rs  pmtiles.rs  shp.rs  wkb.rs
src/io/csv/: mod.rs  read.rs  write.rs
src/io/geoparquet/: read.rs  write.rs
src/io/pack/: mod.rs  read.rs  write.rs
src/io/parquet/: mod.rs  read.rs  write.rs
src/io/pmtiles/: mod.rs  proj.rs  read.rs  write.rs
src/io/svg/: color.rs  geometry.rs  mod.rs  proj.rs  writer.rs
src/io/wkb/: read.rs  write.rs
src/map/: geo_id.rs  geo_ty.rs  layer.rs  map.rs  mod.rs  parent.rs  util.rs
src/map/io/: build.rs  geojson.rs  mod.rs  read.rs  svg.rs  write.rs
src/map/pack/: build.rs  download.rs  format.rs  manifest.rs  mod.rs  pack.rs  read.rs  write.rs
src/objective/: metric.rs  mod.rs  objective.rs
src/pack/: clean.rs  download.rs  format.rs  manifest.rs  mod.rs  pack.rs  source.rs
src/pack/io/: csr.rs  mod.rs
src/pack/utils/: clean.rs  download.rs  mod.rs
src/packbuilder/: mod.rs  pack.rs  types.rs
src/partition/: contiguity.rs  frontier.rs  hull_set.rs  mod.rs  multi_set.rs  multiset.rs  partition.rs  partition_set.rs
src/partition/algorithm/: anneal.rs  compactness.rs  equalize.rs  mod.rs  randomize.rs  tabu.rs
src/partition/metrics/: compactness.rs  demographic.rs  electoral.rs  mod.rs  splits.rs
src/partition/mutation/: mod.rs  mutation.rs
src/partition/ops/: flip.rs  merge.rs  mod.rs  recombine.rs
src/partition/structures/: edge_list.rs  hull_set.rs  mod.rs  multi_set.rs  part_graph.rs  partition_set.rs
src/plan/: boundary.rs  mod.rs  plan.rs
src/plan/io/: csv.rs  svg.rs
src/redistrict/: districting.rs
src/types/: geo_id.rs  map_data.rs  mod.rs
tools/: build_pack.py
(+9 files in other folders)
