[package]
name = "openmander"
version = { workspace = true }
edition = { workspace = true }
description = "A fast, memory-efficient redistricting toolkit"
repository = "https://github.com/Ben1152000/openmander-core"
readme = "README.md"
keywords = ["redistricting", "geospatial", "graphs", "partition"]
categories = ["science", "data-structures", "algorithms", "geospatial"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE*"]

[dependencies]
# Core dependencies
anyhow = "1"
ahash = "0.8"
bytes = "1"
geo = "0.30"
geo-traits = "0.3"
hex = "0.4"
ndarray = { version = "0.15", features = ["rayon"] }
polars = { version = "0.50", default-features = false, features = ["csv", "polars-ops", "json"] }
proj4rs = "0.1"
rand = "0.9"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"], optional = true }
rstar = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shapefile = "0.6"
smallvec = "1.15"
tempfile = "3"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

# Arrow/Parquet stack for data storage (optional, requires parquet feature)
arrow-array = { version = "56", optional = true }
arrow-schema = { version = "56", optional = true }
parquet = { version = "56", default-features = false, features = ["arrow", "zstd"], optional = true }
# Note: parquet pulls in zstd-sys and lz4-sys for compression support
# These have C code that doesn't compile for WASM, but are needed for Python bindings
# WASM bindings disable parquet feature entirely

# GeoArrow/GeoParquet stack for geometry storage (optional, requires parquet feature)
geoarrow-array = { version = "0.5", optional = true }
geoarrow-schema = { version = "0.5", optional = true }
geoparquet = { version = "0.5", optional = true }

[features]
default = ["download", "parquet"]
download = ["reqwest", "polars/lazy"]  # lazy required for build_pack and download_pack
parquet = ["polars/parquet", "dep:arrow-array", "dep:arrow-schema", "dep:parquet", "dep:geoarrow-array", "dep:geoarrow-schema", "dep:geoparquet"]
json = []  # JSON support is always available (polars/json is in default features)

[workspace]
members = ["bindings/python", "bindings/wasm"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2024"
# license = "MIT OR Apache-2.0"

[profile.min]
inherits = "release"
opt-level = "z"
debug = false
strip = true
lto = true
codegen-units = 1
incremental = false
panic = "abort"
