[package]
name = "openmander"
version = { workspace = true }
edition = { workspace = true }
description = "A fast, memory-efficient redistricting toolkit"
repository = "https://github.com/Ben1152000/openmander-core"
readme = "README.md"
keywords = ["redistricting", "geospatial", "graphs", "partition"]
categories = ["science", "data-structures", "algorithms", "geospatial"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE*"]

[dependencies]
# Core dependencies
anyhow = "1"
ahash = "0.8"
bytes = "1"
geo = "0.30"
geo-traits = "0.3"
hex = "0.4"
ndarray = { version = "0.15", features = ["rayon"] }
polars = { version = "0.50", default-features = false, features = ["csv", "polars-ops", "json"] }
proj4rs = "0.1"
rand = "0.9"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"], optional = true }
rstar = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shapefile = "0.6"
smallvec = "1.15"
tempfile = "3"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

# PMTiles support for geometry storage
# Use local fork with zstd conditionally removed for WASM (zstd-sys has C code that doesn't compile for WASM)
# The fork's Cargo.toml makes zstd only available for non-WASM targets
# For WASM, we disable async feature since we use sync API with Cursor<Vec<u8>>
pmtiles2 = { path = "vendor/pmtiles2", optional = true }
# MVT (Mapbox Vector Tiles) encoding for PMTiles
mvt = { version = "0.10", optional = true }
# MVT (Mapbox Vector Tiles) decoding for PMTiles
mvt-reader = { version = "2.2", optional = true }
# geo-types for mvt-reader geometry types and WKB support
geo-types = { version = "0.7", optional = true }
# Compression for PMTiles and WKB (gzip) - always available, compiles fine for WASM
flate2 = "1"
# WKB (Well-Known Binary) for hull storage - using custom minimal implementation
# No external WKB crate needed, we implement a minimal WKB encoder/decoder for Polygon

# Arrow/Parquet stack for data storage (optional, requires parquet feature)
arrow-array = { version = "56", optional = true }
arrow-schema = { version = "56", optional = true }
parquet = { version = "56", default-features = false, features = ["arrow", "zstd"], optional = true }
# Note: parquet pulls in zstd-sys and lz4-sys for compression support
# These have C code that doesn't compile for WASM, but are needed for Python bindings
# WASM bindings disable parquet feature entirely

# GeoArrow/GeoParquet stack for geometry storage (optional, requires parquet feature)
geoarrow-array = { version = "0.5", optional = true }
geoarrow-schema = { version = "0.5", optional = true }
geoparquet = { version = "0.5", optional = true }

[features]
default = ["download", "parquet", "pmtiles"]
# Network functionality for downloading packs from URLs
download = ["reqwest", "polars/lazy"]
# Parquet/GeoParquet formats - disabled for WASM (zstd-sys, lz4-sys have C code that doesn't compile)
parquet = ["polars/parquet", "dep:arrow-array", "dep:arrow-schema", "dep:parquet", "dep:geoarrow-array", "dep:geoarrow-schema", "dep:geoparquet"]
# PMTiles format for geometry storage - works everywhere including WASM
pmtiles = ["dep:pmtiles2", "dep:mvt", "dep:mvt-reader", "dep:geo-types"]

[workspace]
members = ["bindings/python", "bindings/wasm"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2024"
# license = "MIT OR Apache-2.0"
