[package]
name = "openmander"
version = { workspace = true }
edition = { workspace = true }
description = "A fast, memory-efficient redistricting toolkit"
repository = "https://github.com/Ben1152000/openmander-core"
readme = "README.md"
keywords = ["redistricting", "geospatial", "graphs", "partition"]
categories = ["science", "data-structures", "algorithms", "geospatial"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE*"]

[dependencies]
anyhow = "1"
ahash = "0.8"
flate2 = "1"
geo = "0.30"
geograph = { path = "crates/geograph", version = "0.2.0" }
hex = "0.4"
ndarray = { version = "0.15", features = ["rayon"] }
polars = { version = "0.50", default-features = false, features = ["csv", "polars-ops", "json"] }
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shapefile = "0.6"
tempfile = "3"
zip = { version = "2", default-features = false, features = ["deflate"] }

# PMTiles geometry storage (forked to remove zstd-sys for WASM compatibility)
pmtiles2 = { path = "../pmtiles-rs", optional = true }
# MVT encoding for PMTiles writing
mvt = { version = "0.10", optional = true }

# WASM: redirect println!/eprintln! to browser console
web-sys = { version = "0.3", features = ["console"], optional = true }

[features]
default = ["download", "parquet", "pmtiles"]
# Network functionality for downloading packs from URLs
download = ["reqwest", "polars/lazy"]
# Parquet data format (disabled for WASM: zstd-sys/lz4-sys require C compilation)
parquet = ["polars/parquet"]
# PMTiles geometry storage (WASM-compatible)
pmtiles = ["dep:pmtiles2", "dep:mvt"]
# Redirect println!/eprintln! to browser console (WASM bindings)
wasm-console = ["dep:web-sys"]

[workspace]
members = ["crates/geograph", "bindings/python", "bindings/wasm"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
