[package]
name = "openmander-py"
version = { workspace = true }
edition = { workspace = true }
publish = false

[lib]
name = "openmander"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }

# Uses all default features (download, parquet, pmtiles)
openmander-core = { package = "openmander", path = "../.." }

[build-dependencies]
pyo3-build-config = "0.21"
