[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "openmander"
version = "0.1.0"
requires-python = ">=3.8"
description = "OpenMander: fast redistricting in Rust with Python bindings"
classifiers = ["Programming Language :: Python :: 3"]

[tool.maturin]
features = []
