[package]
name = "openmander-wasm"
version = { workspace = true }
edition = { workspace = true }
publish = false

[lib]
name = "openmander"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
js-sys = "0.3"
anyhow = "1"

# For WASM: use JSON format instead of parquet
# Parquet requires zstd-sys and lz4-sys which have C code that doesn't compile for WASM.
# JSON format is WASM-compatible and provides the same functionality.
openmander-core = { package = "openmander", path = "../..", default-features = false, features = ["json"] }

