[package]
name = "openmander-wasm"
version = { workspace = true }
edition = { workspace = true }
publish = false

[lib]
name = "openmander"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
js-sys = "0.3"
anyhow = "1"

# For WASM: disable parquet and download (C deps don't compile for WASM)
# PMTiles is WASM-compatible and uses GZip compression (no zstd)
openmander-core = { package = "openmander", path = "../..", default-features = false, features = ["pmtiles"] }

