[package]
name = "openmander-common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
geo = { workspace = true }
geo-traits = { workspace = true }
geoarrow-array = { workspace = true }
geoarrow-schema = { workspace = true }
geoparquet = { workspace = true }
hex = { workspace = true }
parquet = { workspace = true }
polars = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
shapefile = { workspace = true }
tempfile = { workspace = true }
zip = { workspace = true }
