[package]
name = "openmander-common"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
geo = { workspace = true }
geo-traits = { workspace = true }
geoarrow-array = { workspace = true }
geoarrow-schema = { workspace = true }
geoparquet = { workspace = true }
hex = { workspace = true }
parquet = { workspace = true }
polars = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
shapefile = { workspace = true }
tempfile = { workspace = true }
zip = { workspace = true }
