[package]
name = "geograph"
version = { workspace = true }
edition = { workspace = true }
description = "Self-contained DCEL (Doubly Connected Edge List) for planar graph geometry"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ben1152000/openmander-core/tree/master/crates/geograph"
readme = "README.md"
keywords = ["geometry", "planar-graph", "dcel", "geospatial", "adjacency"]
categories = ["data-structures", "algorithms", "geospatial"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE*"]

[dependencies]
ahash = "0.8"
geo = "0.30"
rstar = "0.12"
