[package]
name = "openmander-map"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
geo = { workspace = true }
geo-traits = { workspace = true }
geoarrow = { workspace = true }
geoarrow-array = { workspace = true }
geoarrow-schema = { workspace = true }
geoparquet = { workspace = true }
hex = { workspace = true }
parquet = { workspace = true }
polars = { workspace = true }
rstar = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
shapefile = { workspace = true }
smallvec = { workspace = true }
