[package]
name = "openmander-map"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
geo = { workspace = true }
polars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shapefile = { workspace = true }

openmander-common = { path = "../common" }
openmander-geom = { path = "../geom" }
openmander-graph = { path = "../graph" }
