[package]
name = "openmander-map"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
geo = { workspace = true }
polars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shapefile = { workspace = true }

openmander-common = { path = "../common" }
openmander-geom = { path = "../geom" }
openmander-graph = { path = "../graph" }
