[package]
name = "openmander-plan"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
geo = { workspace = true }
polars = { workspace = true }

openmander-common = { path = "../common" }
openmander-map = { path = "../map" }
openmander-partition = { path = "../partition" }
