[package]
name = "openmander-plan"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
geo = { workspace = true }
polars = { workspace = true }

openmander-common = { path = "../common" }
openmander-map = { path = "../map" }
openmander-partition = { path = "../partition" }
